--- a/html-page/info.html
+++ b/html-page/info.html
@@ -26,7 +26,50 @@
     </header>
 
     <main>
-
+        <section class="info-information-page">
+          <h1 class="info-information-title">Information</h1>
+          <div class="info-information-block">
+            <p class="info-information-text">Japanese food has many different<br/> styles and each region in Japan has its<br/> own style. Japanese food also has a<br/> history of cultural exchange between<br/> Japan and other counties. In modern<br/> times, the West inspired the Japanese<br/> to invent new dishes. Some of these<br/> dishes have become popular not only<br/> inside Japan but also outside.</p>
+            <img src="../style/img/fuji-img.jpg" alt="" height="520" weidth="562">
+          </div>
+        </section>
+        <section class="info-price-page">
+            <h2 class="info-price-title">Price</h2>
+            <div class="info-price-list">
+                <ul>
+                    <li class="info-price-menu">Sushi - 15$</li>
+                    <li class="info-price-menu">Ramen - 12$</li>
+                    <li class="info-price-menu">Soba - 8$</li>
+                    <li class="info-price-menu">Matcha - 5$</li>
+                    <li class="info-price-menu">Takoyaki - 8$</li>
+                    <li class="info-price-menu">Wagyu steak - 50$</li>
+                    <li class="info-price-menu">Mochi - 3$</li>
+                    <li class="info-price-menu">Udon - 5$</li>
+                    <li class="info-price-menu">Sashimi - 10$</li>
+                    <li class="info-price-menu">Onigiri - 3$</li>
+                    <li class="info-price-menu">Omurice - 8$</li>
+                    <li class="info-price-menu">Taiyaki - 3$</li>
+                </ul>
+                <ul>
+                    <li class="info-price-offer">Special set - 80$:</li>
+                    <li class="info-price-offer">1.Sushi</li>
+                    <li class="info-price-offer">2.Ramen</li>
+                    <li class="info-price-offer">3.Onigiri</li>
+                    <li class="info-price-offer">4.Mochi</li>
+                    <li class="info-price-offer">5.Udon</li>
+                    <li class="info-price-offer">6.Omurice</li>
+                    <li class="info-price-offer">7.Taiyaki</li>
+                    <li class="info-price-offer">8.Sashimi</li>
+                    <li class="info-price-offer">9.Matcha</li>
+                    <li class="info-price-offer">10.Wagyu steak</li>
+                    <li class="info-price-offer-last">(half porsion)</li>
+                </ul>
+                
+            </div>
+            <a href="./contact.html" class="order-btn-link">
+                <button type="button" class="order-btn">Order now</button>
+            </a>
+        </section>
     </main>
 
     <footer >
