--- a/index.html
+++ b/index.html
@@ -26,179 +26,190 @@
     </header>
 
     <main>
-        <!-- <section class="container">
+        <section class="main-list-page">
             <h1 class="main-title">Food List</h1>
-            <ul>
+            <ul class="main-list-ul">
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/sushi-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/sushi-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a traditional Japanese dish made with vinegared rice, typically seasoned with sugar and salt, and combined with a variety of ingredients, such as seafood, vegetables,</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Sushi</p>
+                            <p class="main-list-scrol-name-price">Price: 15$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/ramen-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/ramen-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a Japanese noodle dish. It includes Chinese-style wheat noodles served in a broth. Common flavors are soy sauce and miso, with typical toppings including sliced pork, nori, menma, and scallions. Ramen has its roots in Chinese noodle dishes and is a part of Japanese Chinese cuisine.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Ramen</p>
+                            <p class="main-list-scrol-name-price">Price: 12$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/soba-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/soba-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> are Japanese noodles made primarily from buckwheat flour, with a small amount of wheat flour mixed in. It has an ashen brown color, and a slightly grainy texture. The noodles are served either chilled with a dipping sauce, or hot in a noodle soup.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Soba</p>
+                            <p class="main-list-scrol-name-price">Price: 8$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/matcha-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/matcha-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> is a finely ground powder of green tea specially processed from shade-grown tea leaves. Shade growing gives matcha its characteristic bright green color and strong umami flavor. Matcha is typically consumed suspended in hot water.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Matcha</p>
+                            <p class="main-list-scrol-name-price">Price: 5$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/takoyaki.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/takoyaki.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a ball-shaped Japanese snack made of a wheat flour-based batter and cooked in a special molded pan. It is typically filled with minced or diced octopus, tempura scraps, pickled ginger, and green onion. The balls are brushed with takoyaki sauce and mayonnaise.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Takoyaki</p>
+                            <p class="main-list-scrol-name-price">Price: 8$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/wagyu-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/wagyu-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> is the collective name for the four principal Japanese breeds of beef cattle. All wagyū cattle originate from early twentieth-century cross-breeding between native Japanese cattle and imported stock, mostly from Europe.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Wagyu Steak</p>
+                            <p class="main-list-scrol-name-price">Price: 50$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/motchi-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/motchi-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a Japanese rice cake made of mochigome, a short-grain japonica glutinous rice, and sometimes other ingredients such as water, sugar, and cornstarch. The steamed rice is pounded into paste and molded into the desired shape.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Mochi</p>
+                            <p class="main-list-scrol-name-price">Price: 3$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/Udon-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/Udon-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> is a thick noodle made from wheat flour, used in Japanese cuisine. There are a variety of ways it is prepared and served. Its simplest form is in a soup as kake udon with a mild broth called kakejiru made from dashi, soy sauce, and mirin.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Udon</p>
+                            <p class="main-list-scrol-name-price">Price: 5$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/sashimi-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/sashimi-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a Japanese delicacy consisting of fresh raw fish or meat sliced into thin pieces and often eaten with soy sauce.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Sashimi</p>
+                            <p class="main-list-scrol-name-price">Price: 12$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/onigiri-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/onigiri-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> also known as omusubi or nigirimeshi, is a Japanese rice ball made from white rice. It is usually formed into triangular or cylindrical shapes, and wrapped in nori. Onigiri traditionally have sour or salty fillings such as umeboshi, salted salmon, katsuobushi, kombu. </p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Omigiri</p>
+                            <p class="main-list-scrol-name-price">Price: 3$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/omurice-img.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/omurice-img.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text"> is a Japanese dish consisting of an omelette made with fried rice and thin, fried scrambled eggs, usually topped with ketchup. It is a popular dish also commonly cooked at home.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Omurice</p>
+                            <p class="main-list-scrol-name-price">Price: 8$</p>
                         </div>
                     </div>
                 </li>
 
 
                 <li class="main-list-li">
-                    <img height="369px" weigth="369px" src="./style/img/taiyaki.jpg" alt="">
+                    <img height="369px" weidth="369px" src="./style/img/taiyaki.jpg" alt="">
                     <div class="main-list-scrol">
                         <div class="main-list-scrol-info">
-                            <p class="main-list-scrol-text"></p>
+                            <p class="main-list-scrol-text">is a Japanese fish-shaped cake, commonly sold as street food. It imitates the shape of tai, which it is named after. The most common filling is red bean paste that is made from sweetened adzuki beans.</p>
                         </div>
                         <div class="main-list-scrol-name">
-                            <p class="main-list-scrol-name-name"></p>
-                            <p class="main-list-scrol-name-price"></p>
+                            <p class="main-list-scrol-name-name">Name: Taiyaki</p>
+                            <p class="main-list-scrol-name-price">Price: 3$</p>
                         </div>
                     </div>
                 </li>
 
 
             </ul>
-        </section> -->
+        </section>
+
+
+    <section class="main-offer-page">
+    <div class="main-offer-block">
+        <img class="main-offer-img" src="./style/img/restoraun-img.jpg" alt="" height="340px" weidth="815px">
+        <a href="./html-page/contact.html" class="order-btn-link-main">
+            <button type="button" class="order-btn">Order now</button>
+        </a>
+    </div>
+    <p class="main-offer-text">we also have a special offer. You<br/> can book a set of 10 dishes for up<br/> to 10 people, which immerses you<br/> in Japanese culture and<br/> traditions. The Chef will cook<br/> with you and tell you about the<br/> history and meaning of the dish.<br/> Ideal for a corporate party or<br/> family vacation</p>
+    </section>
 
     </main>
 
